# obs-utils-mge

./: ChangeLog  Makefile.am  NEWS  README  configure.ac
.github/workflows/: build-test.yml
misc/: TODO.txt
src/conf/etc/: Makefile.am  obs-utils.conf.in
src/man/1/: Makefile.am  oscbuilder.1.man.in  oscbuilder.sh.1.man.in
src/prg/bash/: Makefile.am  oscbuilder.sh.in
